--- a/src/cli/cli.csproj
+++ b/src/cli/cli.csproj
@@ -35,9 +35,12 @@ This package provides the .NET global tool.</PackageDescription>
     <Import Project="../interpreter/buildTransitive/Vezel.Celerity.Interpreter.targets" />
     <Import Project="../jit/buildTransitive/Vezel.Celerity.Jit.targets" />
     <Import Project="../kernel/buildTransitive/Vezel.Celerity.Kernel.targets" />
+    <Import Project="../library/buildTransitive/Vezel.Celerity.Library.targets" />
+    <Import Project="../quality/buildTransitive/Vezel.Celerity.Quality.targets" />
     <Import Project="../runtime/buildTransitive/Vezel.Celerity.Runtime.targets" />
     <Import Project="../semantics/buildTransitive/Vezel.Celerity.Semantics.targets" />
     <Import Project="../server/buildTransitive/Vezel.Celerity.Server.targets" />
     <Import Project="../syntax/buildTransitive/Vezel.Celerity.Syntax.targets" />
     <Import Project="../tooling/buildTransitive/Vezel.Celerity.Tooling.targets" />
+    <Import Project="../typing/buildTransitive/Vezel.Celerity.Typing.targets" />
 </Project>
