Start implementing a linting API.
Also:

* Move the lowercase base indicator warning to a lint.
* Change syntax diagnostic codes to start from 1000.

Part of #40.

--- a/src/quality/quality.csproj
+++ b/src/quality/quality.csproj
@@ -10,6 +10,10 @@ This package provides code quality analyses in the form of lints.</PackageDescri
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="Vezel.Celerity.Diagnostics" />
+    </ItemGroup>
+
+    <ItemGroup>
         <None Include="buildTransitive/**"
               Pack="true"
               PackagePath="%(Identity)" />
