--- a/src/quality/buildTransitive/Vezel.Celerity.Quality.targets
+++ b/src/quality/buildTransitive/Vezel.Celerity.Quality.targets
@@ -1,4 +1,6 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
+        <Using Include="Vezel.Celerity.Quality" />
+        <Using Include="Vezel.Celerity.Quality.Passes" />
     </ItemGroup>
 </Project>
