Some restructuring of runtime projects.
We will use the native library for all interop in the runtime. This allows us
to disable runtime marshalling in all projects.

Closes #8.

--- a/src/runtime/interpreter/interpreter.csproj
+++ b/src/runtime/interpreter/interpreter.csproj
@@ -5,7 +5,7 @@
         <PackageDescription>$(PackageDescription)
 
 This package provides the portable bytecode interpreter which does not require
-dynamic code generation or the supporting native library.</PackageDescription>
+dynamic code generation.</PackageDescription>
         <PackageId>Vezel.Celerity.Runtime.Interpreter</PackageId>
         <RootNamespace>Vezel.Celerity.Runtime.Interpreter</RootNamespace>
     </PropertyGroup>
