--- a/src/runtime/compiler/compiler.csproj
+++ b/src/runtime/compiler/compiler.csproj
@@ -4,44 +4,18 @@
         <IsPackable>true</IsPackable>
         <PackageDescription>$(PackageDescription)
 
-This package provides the optimizing just-in-time compiler for 64-bit systems,
-as well as the supporting native library.</PackageDescription>
+This package provides the optimizing just-in-time compiler for 64-bit systems.</PackageDescription>
         <PackageId>Vezel.Celerity.Runtime.Compiler</PackageId>
         <RootNamespace>Vezel.Celerity.Runtime.Compiler</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="../core/core.csproj" />
-        <ProjectReference Include="../native/native.cproj"
-                          ReferenceOutputAssembly="false" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Iced" />
-        <PackageReference Include="Microsoft.Windows.CsWin32"
-                          PrivateAssets="all" />
-        <PackageReference Include="Microsoft.Windows.SDK.Win32Docs"
-                          PrivateAssets="all" />
-        <PackageReference Include="Microsoft.Windows.SDK.Win32Metadata"
-                          PrivateAssets="all" />
     </ItemGroup>
-
-    <Target Name="_AddNativeLibraries"
-            DependsOnTargets="ResolveAssemblyReferences"
-            BeforeTargets="AssignTargetPaths">
-        <MSBuild Projects="../native/native.cproj"
-                 Targets="_GetNativeLibraries">
-            <Output TaskParameter="TargetOutputs"
-                    ItemName="_NativeLibrary" />
-        </MSBuild>
-
-        <ItemGroup>
-            <Content Include="@(_NativeLibrary)"
-                     CopyToOutputDirectory="Always"
-                     Link="%(RuntimeIdentifier)/%(Filename)%(Extension)"
-                     PackagePath="runtimes/%(RuntimeIdentifier)/native" />
-        </ItemGroup>
-    </Target>
 
     <Import Project="../../common/common.targets" />
     <Import Project="../../language/core/core.targets" />
