--- a/src/runtime/core/core.csproj
+++ b/src/runtime/core/core.csproj
@@ -11,17 +11,32 @@ bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="../../language/core/core.csproj" />
+        <InternalsVisibleTo Include="Vezel.Celerity.Runtime.Compiler" />
+        <InternalsVisibleTo Include="Vezel.Celerity.Runtime.Interpreter" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Windows.CsWin32"
-                          PrivateAssets="all" />
-        <PackageReference Include="Microsoft.Windows.SDK.Win32Docs"
-                          PrivateAssets="all" />
-        <PackageReference Include="Microsoft.Windows.SDK.Win32Metadata"
-                          PrivateAssets="all" />
+        <ProjectReference Include="../../language/core/core.csproj" />
+        <ProjectReference Include="../native/native.cproj"
+                          ReferenceOutputAssembly="false" />
     </ItemGroup>
+
+    <Target Name="_AddNativeLibraries"
+            DependsOnTargets="ResolveAssemblyReferences"
+            BeforeTargets="AssignTargetPaths">
+        <MSBuild Projects="../native/native.cproj"
+                 Targets="_GetNativeLibraries">
+            <Output TaskParameter="TargetOutputs"
+                    ItemName="_NativeLibrary" />
+        </MSBuild>
+
+        <ItemGroup>
+            <Content Include="@(_NativeLibrary)"
+                     CopyToOutputDirectory="Always"
+                     Link="%(RuntimeIdentifier)/%(Filename)%(Extension)"
+                     PackagePath="runtimes/%(RuntimeIdentifier)/native" />
+        </ItemGroup>
+    </Target>
 
     <Import Project="../../common/common.targets" />
     <Import Project="../../language/core/core.targets" />
