Remove mention of success typings in the project description.
No need to box ourselves in.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -23,10 +23,9 @@
         <PackageDescription>$(Description)
 
 Celerity is expression-oriented, multi-paradigm, and features optional type
-checking through success typings. Some notable features are pattern matching,
-first-class functions with closures, opt-in mutability, explicit error
-propagation, concurrency based on lightweight agents, and non-suspending garbage
-collection.</PackageDescription>
+checking. Some notable features are pattern matching, first-class functions with
+closures, opt-in mutability, explicit error propagation, concurrency based on
+lightweight agents, and non-suspending garbage collection.</PackageDescription>
         <PackageLicenseExpression>0BSD</PackageLicenseExpression>
         <PackageOutputPath>$(MSBuildThisFileDirectory)pkg/feed/</PackageOutputPath>
         <PackageProjectUrl>https://docs.vezel.dev/celerity</PackageProjectUrl>
