--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,6 +24,8 @@
     <ItemGroup>
         <PackageVersion Include="BenchmarkDotNet"
                         Version="0.13.5" />
+        <PackageVersion Include="CommandLineParser"
+                        Version="2.9.1" />
         <PackageVersion Include="Iced"
                         Version="1.18.0" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"
@@ -46,7 +48,7 @@
                         Version="0.6.0" />
         <PackageVersion Include="Spdx"
                         Version="0.8.0" />
-        <PackageVersion Include="Spectre.Console.Cli"
+        <PackageVersion Include="Spectre.Console"
                         Version="0.46.0" />
         <PackageVersion Include="Wcwidth"
                         Version="1.0.0" />
