--- a/src/benchmarks/benchmarks.csproj
+++ b/src/benchmarks/benchmarks.csproj
@@ -18,9 +18,9 @@
         <Using Include="BenchmarkDotNet.Loggers" />
         <Using Include="BenchmarkDotNet.Running" />
         <Using Include="BenchmarkDotNet.Validators" />
+        <Using Include="CommandLine" />
         <Using Include="Perfolizer.Horology" />
         <Using Include="Spectre.Console" />
-        <Using Include="Spectre.Console.Cli" />
     </ItemGroup>
 
     <ItemGroup>
@@ -32,7 +32,8 @@
 
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" />
-        <PackageReference Include="Spectre.Console.Cli" />
+        <PackageReference Include="CommandLineParser" />
+        <PackageReference Include="Spectre.Console" />
     </ItemGroup>
 
     <Import Project="../common/common.targets" />
