Add a dummy benchmark and start running benchmarks in CI.
Closes #39.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,4 @@ jobs:
             - name: Run tests
               run: |
                   dotnet test -c ${{ matrix.cfg }} --no-build
-#                  dotnet run --project src/benchmarks -c ${{ matrix.cfg }} --no-build
+                  dotnet run --project src/benchmarks -c ${{ matrix.cfg }} --no-build
