--- a/src/language/core/core.targets
+++ b/src/language/core/core.targets
@@ -1,6 +1,7 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
         <Using Include="Vezel.Celerity.Language" />
+        <Using Include="Vezel.Celerity.Language.Diagnostics" />
         <Using Include="Vezel.Celerity.Language.Quality" />
         <Using Include="Vezel.Celerity.Language.Quality.Passes" />
         <Using Include="Vezel.Celerity.Language.Semantics" />
