Add Vezel.Cathode reference to Vezel.Celerity.Runtime.Kernel.

--- a/src/runtime/kernel/kernel.csproj
+++ b/src/runtime/kernel/kernel.csproj
@@ -14,6 +14,10 @@ system.</PackageDescription>
         <ProjectReference Include="../core/core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Vezel.Cathode" />
+    </ItemGroup>
+
     <Import Project="../../common/common.targets" />
     <Import Project="../../language/core/core.targets" />
     <Import Project="../core/core.targets" />
