--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -46,6 +46,8 @@
                         Version="0.19.7" />
         <PackageVersion Include="Spdx"
                         Version="0.8.0" />
+        <PackageVersion Include="Vezel.Cathode"
+                        Version="0.9.156" />
         <PackageVersion Include="Vezel.Cathode.Hosting"
                         Version="0.9.156" />
         <PackageVersion Include="xunit"
