--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -26,6 +26,8 @@
                         Version="0.13.5" />
         <PackageVersion Include="CommandLineParser"
                         Version="2.9.1" />
+        <PackageVersion Include="DotNext"
+                        Version="4.10.0" />
         <PackageVersion Include="Iced"
                         Version="1.18.0" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"
