--- a/src/language/core/core.csproj
+++ b/src/language/core/core.csproj
@@ -11,6 +11,7 @@ binding, and linting.</PackageDescription>
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="DotNext.Runtime" />
         <Using Include="Vezel.Celerity.Buffers" />
         <Using Include="Vezel.Celerity.Diagnostics" />
         <Using Include="Vezel.Celerity.Linq" />
@@ -26,6 +27,10 @@ binding, and linting.</PackageDescription>
         <ProjectReference Include="../../generators/generators.csproj"
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="DotNext" />
     </ItemGroup>
 
     <Import Project="../../common/common.targets" />
