--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,6 +28,8 @@
                         Version="2.9.1" />
         <PackageVersion Include="DotNext"
                         Version="4.10.0" />
+        <PackageVersion Include="Humanizer.Core"
+                        Version="2.14.1" />
         <PackageVersion Include="Iced"
                         Version="1.18.0" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"
