--- a/.globalconfig
+++ b/.globalconfig
@@ -485,6 +485,10 @@ dotnet_diagnostic.IDE0230.severity = error
 dotnet_diagnostic.IDE0240.severity = error
 dotnet_diagnostic.IDE0241.severity = error
 dotnet_diagnostic.IDE0250.severity = error
+dotnet_diagnostic.IDE0251.severity = error
+dotnet_diagnostic.IDE0260.severity = error
+dotnet_diagnostic.IDE0270.severity = error
+dotnet_diagnostic.IDE0280.severity = error
 dotnet_diagnostic.IDE1005.severity = error
 dotnet_diagnostic.IDE1006.severity = error
 
