Start moving diagnostic report construction to Vezel.Celerity.Language.Tooling.

--- a/src/language/tooling/tooling.csproj
+++ b/src/language/tooling/tooling.csproj
@@ -11,6 +11,10 @@ diagnostic rendering.</PackageDescription>
     </PropertyGroup>
 
     <ItemGroup>
+        <Using Include="Vezel.Celerity.Diagnostics" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="../core/core.csproj" />
     </ItemGroup>
 
