--- a/src/language/tooling/tooling.targets
+++ b/src/language/tooling/tooling.targets
@@ -1,4 +1,6 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
+        <Using Include="Vezel.Celerity.Language.Tooling" />
+        <Using Include="Vezel.Celerity.Language.Tooling.Diagnostics" />
     </ItemGroup>
 </Project>
