--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -40,8 +40,14 @@
                         Version="6.4.0" />
         <PackageVersion Include="OmniSharp.Extensions.LanguageServer"
                         Version="0.19.7" />
+        <PackageVersion Include="Shouldly"
+                        Version="4.1.0" />
         <PackageVersion Include="Spdx"
                         Version="0.8.0" />
+        <PackageVersion Include="Verify.DiffPlex"
+                        Version="2.2.0" />
+        <PackageVersion Include="Verify.Xunit"
+                        Version="19.11.1" />
         <PackageVersion Include="Vezel.Cathode"
                         Version="0.10.40" />
         <PackageVersion Include="Vezel.Cathode.Hosting"
