--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "files.exclude": {
     "**/.vs": true,
+    "**/*.received.*": true,
+    "**/*.verified.*": true,
     "pkg/cache/*[!_._]": true,
     "pkg/feed/*.nupkg": true,
     "**/bin": true,
