Add formulahendry.dotnet-test-explorer to .vscode/extensions.json.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "davidanson.vscode-markdownlint",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
+    "formulahendry.dotnet-test-explorer",
     "github.codespaces",
     "github.vscode-pull-request-github",
     "hashhar.gitattributes",
