--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -30,6 +30,8 @@
                         Version="4.10.0" />
         <PackageVersion Include="Iced"
                         Version="1.18.0" />
+        <PackageVersion Include="Meziantou.Xunit.ParallelTestFramework"
+                        Version="2.1.0" />
         <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"
                         Version="4.5.0" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk"
