--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,19 +1,17 @@
 {
   "recommendations": [
+    "chdsbd.github-code-owners",
     "codezombiech.gitignore",
     "davidanson.vscode-markdownlint",
-    "eamodio.gitlens",
     "editorconfig.editorconfig",
     "formulahendry.dotnet-test-explorer",
-    "github.codespaces",
     "github.vscode-pull-request-github",
-    "hashhar.gitattributes",
-    "jasonnutter.vscode-codeowners",
     "jock.svg",
     "llvm-vs-code-extensions.vscode-clangd",
     "ms-dotnettools.csharp",
     "redhat.vscode-xml",
     "redhat.vscode-yaml",
-    "tintoy.msbuild-project-tools"
+    "tintoy.msbuild-project-tools",
+    "yy0931.gitconfig-lsp"
   ]
 }
