--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -12,6 +12,7 @@
         <Using Include="System.Numerics" />
         <Using Include="System.Reflection" />
         <Using Include="System.Runtime.CompilerServices" />
+        <Using Include="System.Runtime.ExceptionServices" />
         <Using Include="System.Runtime.InteropServices" />
         <Using Include="System.Text" />
         <Using Include="System.Text.RegularExpressions" />
