--- a/src/language/tooling/tooling.targets
+++ b/src/language/tooling/tooling.targets
@@ -2,5 +2,7 @@
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
         <Using Include="Vezel.Celerity.Language.Tooling" />
         <Using Include="Vezel.Celerity.Language.Tooling.Diagnostics" />
+        <Using Include="Vezel.Celerity.Language.Tooling.Projects" />
+        <Using Include="Vezel.Celerity.Language.Tooling.Workspaces" />
     </ItemGroup>
 </Project>
