--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -14,6 +14,7 @@
         <Using Include="System.Runtime.CompilerServices" />
         <Using Include="System.Runtime.ExceptionServices" />
         <Using Include="System.Runtime.InteropServices" />
+        <Using Include="System.Security" />
         <Using Include="System.Text" />
         <Using Include="System.Text.RegularExpressions" />
         <Using Include="System.Xml" />
