--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.0'">
+        <Using Include="System.Collections.Frozen" />
         <Using Include="System.Text.Json" />
     </ItemGroup>
 
