Only set PackageReleaseNotes if PublicRelease=true.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -62,7 +62,7 @@
     <Target Name="_SetReleaseNotes"
             DependsOnTargets="GetBuildVersion"
             BeforeTargets="GenerateNuspec"
-            Condition="'$(IsPackable)' == 'true'">
+            Condition="'$(IsPackable)' == 'true' and '$(PublicRelease)' == 'true'">
         <PropertyGroup>
             <PackageReleaseNotes>https://github.com/vezel-dev/celerity/releases/tag/v$(Version)</PackageReleaseNotes>
         </PropertyGroup>
