--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,10 @@ jobs:
               run: |
                   dotnet tool restore
                   dotnet publish -c ${{ matrix.cfg }}
+                  dotnet run --project src/driver -c ${{ matrix.cfg }} -- check src/language/library
+                  dotnet run --project src/driver -c ${{ matrix.cfg }} -- format src/language/library
             - name: Run tests
               run: |
                   dotnet test -c ${{ matrix.cfg }} --no-build
+                  dotnet run --project src/driver -c ${{ matrix.cfg }} -- test src/language/library
                   dotnet run --project src/benchmarks -c ${{ matrix.cfg }} --no-build -- -t
