Revert "Don't publish Vezel.Celerity.Language.Server - at least for now."
This reverts commit b112e49253d15e07993a204492671a446053be0a.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -38,6 +38,7 @@ jobs:
                       Vezel.Celerity.Common
                       Vezel.Celerity.Language
                       Vezel.Celerity.Language.Library
+                      Vezel.Celerity.Language.Server
                       Vezel.Celerity.Language.Tooling
                       Vezel.Celerity.Runtime
                       Vezel.Celerity.Runtime.Compiler
