--- a/src/language/server/server.csproj
+++ b/src/language/server/server.csproj
@@ -1,6 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyName>Vezel.Celerity.Language.Server</AssemblyName>
+        <IsPackable>true</IsPackable>
+        <PackageDescription>$(PackageDescription)
+
+This package provides the Language Server Protocol implementation.</PackageDescription>
+        <PackageId>Vezel.Celerity.Language.Server</PackageId>
         <RootNamespace>Vezel.Celerity.Language.Server</RootNamespace>
     </PropertyGroup>
 
