--- a/src/driver/driver.csproj
+++ b/src/driver/driver.csproj
@@ -20,7 +20,7 @@ This package provides the .NET global tool.</PackageDescription>
 
     <ItemGroup>
         <ProjectReference Include="../language/library/library.csproj" />
-        <ProjectReference Include="../language/server/server.csproj" />
+        <ProjectReference Include="../language/service/service.csproj" />
         <ProjectReference Include="../runtime/compiler/compiler.csproj" />
         <ProjectReference Include="../runtime/interpreter/interpreter.csproj" />
         <ProjectReference Include="../runtime/kernel/kernel.csproj" />
@@ -33,7 +33,7 @@ This package provides the .NET global tool.</PackageDescription>
 
     <Import Project="../language/core/core.targets" />
     <Import Project="../language/library/library.targets" />
-    <Import Project="../language/server/server.targets" />
+    <Import Project="../language/service/service.targets" />
     <Import Project="../language/tooling/tooling.targets" />
     <Import Project="../runtime/compiler/compiler.targets" />
     <Import Project="../runtime/core/core.targets" />
