--- a/src/language/service/service.targets
+++ b/src/language/service/service.targets
@@ -1,4 +1,6 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
+        <Using Include="Vezel.Celerity.Language.Service" />
+        <Using Include="Vezel.Celerity.Language.Service.Logging" />
     </ItemGroup>
 </Project>
