--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -15,7 +15,7 @@
         <ProjectReference Include="../driver/driver.csproj"
                           ReferenceOutputAssembly="false" />
         <ProjectReference Include="../language/library/library.csproj" />
-        <ProjectReference Include="../language/server/server.csproj" />
+        <ProjectReference Include="../language/service/service.csproj" />
         <ProjectReference Include="../runtime/compiler/compiler.csproj" />
         <ProjectReference Include="../runtime/interpreter/interpreter.csproj" />
         <ProjectReference Include="../runtime/kernel/kernel.csproj" />
@@ -35,7 +35,7 @@
 
     <Import Project="../language/core/core.targets" />
     <Import Project="../language/library/library.targets" />
-    <Import Project="../language/server/server.targets" />
+    <Import Project="../language/service/service.targets" />
     <Import Project="../language/tooling/tooling.targets" />
     <Import Project="../runtime/compiler/compiler.targets" />
     <Import Project="../runtime/core/core.targets" />
