Run celerity check and format in package/release workflows.
We effectively do the same for the C# code of the project, so this makes sense
to do for consistency.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -27,6 +27,8 @@ jobs:
               run: |
                   dotnet tool restore
                   dotnet build
+                  dotnet run --project src/driver -c Release --no-build -- check -w src/language/library
+                  dotnet run --project src/driver -c Release --no-build -- format -w src/language/library
             - name: Upload GitHub packages
               run: |
                   dotnet gpr push pkg/feed/*.nupkg -k ${{ secrets.GITHUB_TOKEN }}
