--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
               run: |
                   dotnet tool restore
                   dotnet build -c Release
+                  dotnet run --project src/driver -c Release --no-build -- check -w src/language/library
+                  dotnet run --project src/driver -c Release --no-build -- format -w src/language/library
             - name: Upload NuGet packages
               run: |
                   dotnet nuget push pkg/feed/*.nupkg -k ${{ secrets.NUGET_TOKEN }} -s https://api.nuget.org/v3/index.json
