--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,15 +23,9 @@ jobs:
                   submodules: recursive
             - name: Set up .NET
               uses: actions/setup-dotnet@v3.0.3
-            - name: Build project
+            - name: Run Cake
               run: |
-                  dotnet tool restore
-                  dotnet build
-                  dotnet run --project src/driver --no-build -- check -w src/language/library
-                  dotnet run --project src/driver --no-build -- format -w src/language/library
-            - name: Upload GitHub packages
-              run: |
-                  dotnet gpr push pkg/feed/*.nupkg -k ${{ secrets.GITHUB_TOKEN }}
+                  ./cake -t package -k ${{ secrets.GITHUB_TOKEN }}
             - name: Prune GitHub packages
               uses: SmartsquareGmbH/delete-old-packages@v0.6.0
               with:
