Make _AddNativeLibraries depend on BeforeResGen instead of AssignTargetPaths.
This resolves some weird build issues with:

    $ dotnet build && dotnet publish --no-build

--- a/src/runtime/core/core.csproj
+++ b/src/runtime/core/core.csproj
@@ -23,7 +23,7 @@ bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
 
     <Target Name="_AddNativeLibraries"
             DependsOnTargets="ResolveAssemblyReferences"
-            BeforeTargets="AssignTargetPaths">
+            BeforeTargets="BeforeResGen">
         <MSBuild Projects="../native/native.cproj"
                  Targets="_GetNativeLibraries">
             <Output TaskParameter="TargetOutputs"
