--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,7 +25,7 @@ jobs:
               uses: actions/setup-dotnet@v3.0.3
             - name: Run Cake
               run: |
-                  ./cake -t package -k ${{ secrets.GITHUB_TOKEN }}
+                  ./cake package -k ${{ secrets.GITHUB_TOKEN }}
             - name: Prune GitHub packages
               uses: SmartsquareGmbH/delete-old-packages@v0.6.0
               with:
