Update tasks.vs.json to use the Cake build script.

--- a/tasks.vs.json
+++ b/tasks.vs.json
@@ -6,10 +6,23 @@
       "contextType": "build",
       "appliesTo": "/",
       "type": "launch",
-      "command": "dotnet",
-      "args": [
-        "build",
-        "-clp:NoSummary"
+      "commands": [
+        {
+          "command": "dotnet",
+          "args": [
+            "tool",
+            "restore"
+          ]
+        },
+        {
+          "command": "dotnet",
+          "args": [
+            "cake",
+            "celerity.cake",
+            "-t",
+            "pack"
+          ]
+        }
       ]
     },
     {
@@ -17,10 +30,23 @@
       "contextType": "clean",
       "appliesTo": "/",
       "type": "launch",
-      "command": "dotnet",
-      "args": [
-        "clean",
-        "-clp:NoSummary"
+      "commands": [
+        {
+          "command": "dotnet",
+          "args": [
+            "tool",
+            "restore"
+          ]
+        },
+        {
+          "command": "dotnet",
+          "args": [
+            "cake",
+            "celerity.cake",
+            "-t",
+            "clean"
+          ]
+        }
       ]
     }
   ]
