--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,6 @@
 <configuration>
     <config>
-        <add key="globalPackagesFolder" value="pkg/cache" />
+        <add key="globalPackagesFolder" value=".artifacts/restore" />
     </config>
 
     <fallbackPackageFolders>
@@ -10,7 +10,7 @@
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-        <add key="celerity" value="pkg/feed" />
+        <add key="celerity" value=".artifacts/package/debug" />
     </packageSources>
 
     <packageSourceMapping>
