--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   "files.exclude": {
-    "**/.vs": true,
+    "/.artifacts": true,
     "**/*.received.*": true,
     "**/*.verified.*": true,
-    "pkg/cache/*[!_._]": true,
-    "pkg/feed/*.nupkg": true,
+    "**/.vs": true,
     "**/bin": true,
     "**/obj": true
   }
