--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "files.exclude": {
-    "/.artifacts": true,
+    ".artifacts": true,
     "**/*.received.*": true,
     "**/*.verified.*": true,
     "**/.vs": true,
