--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,6 +23,9 @@ jobs:
                   submodules: recursive
             - name: Set up .NET
               uses: actions/setup-dotnet@v3.0.3
+            - uses: actions/setup-node@v3.6.0
+              with:
+                  node-version-file: package.json
             - name: Run Cake
               run: |
                   ./cake package -k ${{ secrets.GITHUB_TOKEN }}
