Change `.artifacts` directory name to `out`.
Also:

* `out/restore` -> `out/dep`
* `out/cake` -> `out/bld`
* `out/package` -> `out/pkg`
* `out/publish` -> `out/pub`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "files.exclude": {
-    ".artifacts": true,
+    "out": true,
     "**/*.received.*": true,
     "**/*.verified.*": true,
     "**/.vs": true,
