--- a/cake.config
+++ b/cake.config
@@ -1,7 +1,7 @@
 [Paths]
-Addins=.artifacts/cake/addins
-Cache=.artifacts/cake/cache
-Tools=.artifacts/cake/tools
+Addins=out/bld/addins
+Cache=out/bld/cache
+Tools=out/bld/tools
 
 [Settings]
 SkipVerification=true
